# wgpu-ocean

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: camera.rs  generate_plane.rs  lib.rs  main.rs  ocean_shader.wgsl  renderer.rs  vertex.rs
src/ocean/: mod.rs  ocean_cascade.rs  ocean_parameters.rs  ocean_surface.rs  utils.rs
src/ocean/pipelines/: fft.rs  generate_mipmaps_pipeline.rs  initial_spectrum_pipeline.rs  merge_cascades_pipeline.rs  mod.rs  time_dependent_spectrum_pipeline.rs  waves_data_merge_pipeline.rs
src/ocean/pipelines/shaders/: fft.wgsl  generate_mipmaps.wgsl  initial_spectrum.wgsl  merge_cascades.wgsl  time_dependent_spectrum.wgsl  waves_data_merge.wgsl
